--- a/Phim/app/src/main/res/layout/fragment_categoria1_col.xml
+++ b/Phim/app/src/main/res/layout/fragment_categoria1_col.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#d1d8ef"
-    tools:context="com.example.wpenia.phim.Categoria1ColFragment">
+    tools:context="com.example.wpenia.phim.com.example.view.Categoria1ColFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewCategoria1"
