--- a/Phim/app/src/main/res/layout/activity_categoria.xml
+++ b/Phim/app/src/main/res/layout/activity_categoria.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragmento"
-    tools:context="com.example.wpenia.phim.CategoriaActivity">
+    tools:context="com.example.wpenia.phim.com.example.view.CategoriaActivity">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
