--- a/Phim/app/src/main/res/layout/activity_main.xml
+++ b/Phim/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wpenia.phim.MainActivity"
+    tools:context="com.example.wpenia.phim.com.example.view.MainActivity"
     android:orientation="vertical"
     android:background="#9c94d0"
     android:gravity="center_horizontal">
