--- a/Phim/app/src/main/res/layout/fragment_categoria2_col.xml
+++ b/Phim/app/src/main/res/layout/fragment_categoria2_col.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#d1d8ef"
-    tools:context="com.example.wpenia.phim.Categoria2ColFragment">
+    tools:context="com.example.wpenia.phim.com.example.view.Categoria2ColFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewCategoria"
