pantalla de inicio e imagenes categorias

--- a/Phim/app/src/main/res/layout/fragment_categoria2_col.xml
+++ b/Phim/app/src/main/res/layout/fragment_categoria2_col.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#d1d8ef"
-    tools:context="com.example.wpenia.phim.com.example.view.Categoria2ColFragment">
+    android:background="#d1d8ef">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewCategoria"
