--- a/Phim/app/src/main/res/layout/activity_main.xml
+++ b/Phim/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wpenia.phim.com.example.view.MainActivity"
-    android:orientation="vertical"
-    android:background="#9c94d0"
-    android:gravity="center_horizontal">
+    android:background="#d1d8ef">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewIncio"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/phim" />
+        android:src="@drawable/phim"/>
 
-
-
-    <Button
+   <Button
         android:id="@+id/btnInfantiles"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Infantiles" />
-
+       android:layout_below="@+id/imageView"
+        android:text="Infantiles"/>
 
     <Button
         android:id="@+id/btnAdultos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Adultos" />
-
-    <Button
+        android:layout_below="@+id/btnInfantiles"
+        android:text="Adultos"/>
+    </RelativeLayout>
+    <!--<Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="clockwise"
@@ -49,6 +52,6 @@
         android:layout_height="wrap_content"
         android:text="move"
         android:onClick="move"
-        android:id="@+id/button5" />
+        android:id="@+id/button5"/>-->
 
-</LinearLayout>
+</FrameLayout>
