--- a/Phim/app/src/main/res/layout/activity_main.xml
+++ b/Phim/app/src/main/res/layout/activity_main.xml
@@ -10,42 +10,42 @@
         android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-   <Button
-        android:id="@+id/btnInfantiles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Infantiles"/>
-
     <Button
-        android:id="@+id/btnAdultos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnInfantiles"
-        android:text="Adultos"/>
-    </RelativeLayout>
-    <!--<Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="clockwise"
-        android:id="@+id/button2"
-        android:onClick="zoom"/>
+         android:id="@+id/btnInfantiles"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="Infantiles"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="blink"
-        android:onClick="blink"
-        android:id="@+id/button4"/>
+     <Button
+         android:id="@+id/btnAdultos"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_below="@+id/btnInfantiles"
+         android:text="Adultos"/>
+     </RelativeLayout>
+     <Button
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="clockwise"
+         android:id="@+id/button2"
+         android:onClick="zoom"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="move"
-        android:onClick="move"
-        android:id="@+id/button5"/>-->
+     <Button
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="blink"
+         android:onClick="blink"
+         android:id="@+id/button4"/>
+
+     <Button
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="move"
+         android:onClick="move"
+         android:id="@+id/button5"/>-->
 
 </FrameLayout>
