--- a/Phim/app/src/main/res/layout/fragment_tab_perfil.xml
+++ b/Phim/app/src/main/res/layout/fragment_tab_perfil.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.view.TabPerfilFragment">
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/actoresRecycler"
