--- a/Phim/app/src/main/res/layout/item_pelicula.xml
+++ b/Phim/app/src/main/res/layout/item_pelicula.xml
@@ -6,8 +6,8 @@
 
     <android.support.v7.widget.CardView
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardElevation="8dp"
         app:cardCornerRadius="10dp"
