--- a/Phim/app/src/main/res/values/colors.xml
+++ b/Phim/app/src/main/res/values/colors.xml
@@ -23,4 +23,6 @@
     <!--<color name="colorBackgroundFotoUno">#616161</color>-->
     <color name="colorBoton">#ffa726</color>
 
+    <color name="viewBg">#f1f5f8</color>
+    <color name="album_title">#4c4c4c</color>
 </resources>
