--- a/Phimy/app/src/main/res/layout/fragment_tv.xml
+++ b/Phimy/app/src/main/res/layout/fragment_tv.xml
@@ -1,16 +1,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:coverflow="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
-
-  <!-- TODO: Update blank fragment layout
-    <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical|center_horizontal"
-    android:text="Chats"
-    android:textSize="30sp" />-->
 
   <android.support.v7.widget.RecyclerView
       android:id="@+id/movieRecyclerView"
@@ -18,6 +11,5 @@
       android:layout_height="wrap_content"
       app:layout_behavior="@string/appbar_scrolling_view_behavior">
   </android.support.v7.widget.RecyclerView>
-
 
 </FrameLayout>
