--- a/Phimy/app/src/main/res/layout/movie_cardview.xml
+++ b/Phimy/app/src/main/res/layout/movie_cardview.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <ImageView
             android:id="@+id/moviePoster"
             android:layout_width="230dp"
@@ -30,6 +31,16 @@
             android:gravity="center_horizontal"
             android:background="@color/colorBackgroundMovie"
             android:layout_alignParentBottom="true" />
+
+        <Button
+            android:id="@+id/butonFavoritos"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignRight="@id/moviePoster"
+            android:paddingTop="2dp"
+            android:paddingRight="2dp"
+            android:background="@android:color/transparent" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
