--- a/Phimy/app/src/main/res/values/colors.xml
+++ b/Phimy/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>-->
 
-    <color name="colorPrimary">#795548</color>
-    <color name="colorPrimaryDark">#5D4037</color>
+    <color name="colorPrimary">#373737</color>
+    <color name="colorPrimaryDark">#616161</color>
     <color name="colorAccent">#CDDC39</color>
 
     <color name="colorAmber">#ffd149</color>
