--- a/Phimy/app/src/main/res/layout/fragment_detalle.xml
+++ b/Phimy/app/src/main/res/layout/fragment_detalle.xml
@@ -32,23 +32,23 @@
                     android:id="@+id/linearBar"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
                     android:fitsSystemWindows="true"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imagenVideo"
-                        android:fitsSystemWindows="true"
                         android:layout_width="match_parent"
                         android:layout_height="250dp"
+                        android:fitsSystemWindows="true"
                         android:scaleType="centerCrop" />
 
                     <TextView
-                        android:id="@+id/tituloPelicula"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="250dp"
-                        android:textColor="#000000"
-                        android:textSize="30sp" />
+                        android:id="@+id/nombreMovie"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="8dp" />
 
                 </LinearLayout>
 
@@ -58,19 +58,12 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/linearBar">
 
-                    <TextView
-                        android:id="@+id/trailerButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="8dp"
-                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/duracion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="8dp"
-                        android:layout_toRightOf="@id/trailerButton"
+                        android:layout_alignParentTop="true"
                         android:textSize="15sp" />
 
                     <TextView
@@ -81,20 +74,20 @@
                         android:textSize="15sp" />
 
                     <ImageView
-                        android:id="@+id/scoreImg"
+                        android:id="@+id/trailerButton"
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/trailerButton"
                         android:layout_marginTop="15dp"
-                        android:src="@drawable/ic_star_border_black_24dp" />
+                        android:src="@drawable/ic_play_arrow_black_24dp" />
 
                     <TextView
                         android:id="@+id/scoreNumero"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/scoreImg"
-                        android:layout_alignLeft="@id/scoreImg"
-                        android:layout_alignRight="@id/scoreImg"
+                        android:layout_below="@id/trailerButton"
+                        android:layout_alignLeft="@id/trailerButton"
+                        android:layout_alignRight="@id/trailerButton"
+                        android:text="@string/play"
                         android:textAlignment="center" />
 
                     <ImageView
@@ -103,14 +96,14 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/duracion"
                         android:layout_marginTop="15dp"
-                        android:layout_toRightOf="@id/scoreImg"
+                        android:layout_toRightOf="@id/trailerButton"
                         android:src="@drawable/ic_thumbs_up_down_black_24dp" />
 
                     <TextView
                         android:id="@+id/scoreMeta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/scoreImg"
+                        android:layout_below="@id/trailerButton"
                         android:layout_alignLeft="@id/metaImg"
                         android:layout_alignRight="@id/metaImg"
                         android:textAlignment="center" />
@@ -128,7 +121,7 @@
                         android:id="@+id/shareDetalle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/scoreImg"
+                        android:layout_below="@id/trailerButton"
                         android:layout_alignLeft="@id/share"
                         android:layout_alignRight="@id/share"
                         android:text="@string/shareString"
@@ -136,13 +129,28 @@
                         android:textAlignment="center" />
 
                 </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/plot"
+                <com.ms.square.android.expandabletextview.ExpandableTextView
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/expand_text_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/relativeBar"
-                    android:maxLines="2" />
+                    expandableTextView:maxCollapsedLines="2"
+                    expandableTextView:animDuration="200">
+
+                    <TextView
+                        android:id="@+id/plot"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/relativeBar"/>
+                    <ImageButton
+                        android:id="@id/expand_collapse"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:layout_gravity="right|bottom"
+                        android:background="@android:color/transparent"/>
+                </com.ms.square.android.expandabletextview.ExpandableTextView>
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
