--- a/Phimy/app/src/main/res/layout/card_actor.xml
+++ b/Phimy/app/src/main/res/layout/card_actor.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!--TODO BACKGROUND COLOR Y HEIGHT DE CARDVIEW-->
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
